# fluentHRC

./: .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE.txt  README.md  THIRD_PARTY_LICENSES.md  util.py  vcpkg.json
assets/: Checkliste Versuchsleiter.docx
assets/config/: classifier_set.xml  computed_workspace_parameters.xml  kinect2_parameters.xml  object_parameters.xml  object_prototypes.xml
assets/grpc/: CMakeLists.txt  build_proto_x64.bat  build_proto_x64.ipynb  build_proto_x64.py
assets/grpc/proto/: debug.proto  depth_image.proto  hand_tracking.proto  meta_data.proto  object.proto  object_prototype.proto  robot.proto  services.proto  vertex.proto
assets/models/franka/: cobot_pump.binvox  cobot_pump.mtl  finger.mtl  hand.mtl  link0.binvox  link0.mtl  link1.binvox  link1.mtl  link2.binvox  link2.mtl  link3.binvox  link3.mtl  link4.binvox  link4.mtl  link5.binvox  link5.mtl  link6.binvox  link6.mtl  link7.binvox  link7.mtl
assets/mogaze/: locations.csv
assets/mogaze/1/: actions.csv  init_locations.csv  instructions.csv
assets/mogaze/2/: actions.csv  init_locations.csv  instructions.csv
assets/mogaze/3/: actions.csv  init_locations.csv  instructions.csv
assets/mogaze/4/: actions.csv  init_locations.csv  instructions.csv
assets/mogaze/5/: actions.csv  init_locations.csv  instructions.csv
assets/mogaze/6/: actions.csv  init_locations.csv  instructions.csv
assets/mogaze/7/: actions.csv  init_locations.csv  instructions.csv
assets/object_meshes/: bridge.blend  cube.dae  cylinder.dae  my_cylinder.ply  semicylinder.blend
assets/prediction/: action_prediction.prototxt  action_prediction_model.prototxt  action_prediction_solver.prototxt
overlay-ports/abseil/: 4221.patch  portfile.cmake
overlay-ports/base-transformation/: portfile.cmake  vcpkg.json
overlay-ports/caffe/: cuda.patch  portfile.cmake  sth.patch  vcpkg.json
overlay-ports/cudnn/: vcpkg.json
overlay-ports/eigen3/: portfile.cmake
overlay-ports/enact/: License.txt  portfile.cmake  vcpkg.json
overlay-ports/franka/: vcpkg.json
overlay-ports/franka-proxy/: portfile.cmake  vcpkg.json
overlay-ports/gpu-voxels/: portfile.cmake  vcpkg.json
overlay-ports/kinectsdk2/: Config.cmake.in
patches/ports/flexcobot/: portfile.cmake  vcpkg.json
source/: CMakeLists.txt
source/app_evaluation_net/: CMakeLists.txt  module_manager.cpp  module_manager.hpp
source/app_util/: CMakeLists.txt  extract_goal-oriented_actions.cpp
source/app_visualization/: CMakeLists.txt  franka_actor.cpp  franka_actor.h  franka_visualization.cpp  franka_visualization.h  franka_visualization_gpu.cu  franka_visualization_gpu.h  intention_visualizer.cpp  intention_visualizer.hpp  module_manager.cpp  module_manager.hpp  mogaze.cpp  mogaze.hpp  presenter.cpp  presenter.hpp  registration.cpp  signal_types.hpp  simulated_hand_tracking.cpp  simulated_hand_tracking.hpp  task_description.cpp  task_description.hpp  task_progress_visualizer.cpp  task_progress_visualizer.hpp  util.cpp  util.hpp  viewer.cpp  viewer.hpp
source/app_visualization/tests/: hand_pose.cpp  hand_pose.hpp  object_recognition.cpp  object_recognition.hpp
source/csv_reader/: CMakeLists.txt  csvworker.cpp  csvworker.h  main.cpp  tracker.cpp  tracker.hpp
source/franka_high_level/: CMakeLists.txt  franka_actor.cpp  franka_actor.h
source/franka_planning/: CMakeLists.txt  franka_actor.cpp  franka_actor.hpp  robot_agent.cpp  robot_agent.hpp
source/franka_voxel/: CMakeLists.txt  motion_generator_joint_max_accel.cpp  motion_generator_joint_max_accel.h
source/grpc_server/: CMakeLists.txt  Quelle.cpp  global.hpp  point_cloud_processing.cpp  point_cloud_processing.h  proto_plugin.cpp  proto_plugin.h  server_module.cpp  server_module.h  service_impl.cpp  service_impl.h  util.cpp  util.h  visualizer.cpp  visualizer.h  wrapper.hpp
source/intention_prediction/: CMakeLists.txt  agent_manager.cpp  agent_manager.hpp  cpp.hint  framework.hpp  observed_agent.cpp  observed_agent.hpp
source/kinect2_grabber/: main.cpp
source/sample_data_registration/: CMakeLists.txt  ColorBasics.cpp  ColorBasics.h  hand_evaluation.cpp  hand_evaluation.hpp  main.cpp  object_evaluation.cpp  object_evaluation.hpp  projection_matrix.cpp  projection_matrix.hpp  registration_tester.cpp  registration_tester.hpp
source/simulation/: CMakeLists.txt  baraglia17.cpp  baraglia17.hpp  behavior_test.cpp  behavior_test.hpp  benchmark.cpp  benchmark.hpp  build_test.cpp  build_test.hpp  building.cpp  building.hpp  framework.hpp  franka_actor_sim.cpp  franka_actor_sim.h  hoellerich22.cpp  hoellerich22.hpp  main.cpp  mogaze.cpp  mogaze.hpp  rendering.cpp  rendering.hpp  riedelbauch17.cpp  riedelbauch17.hpp  scene.cpp  scene.hpp  sim_terminal_demo.cpp  simulation_io.cpp  simulation_io.hpp  task.cpp  task.hpp
source/state_observation/: CMakeLists.txt  building_estimation.cpp  building_estimation.hpp  calibration.cpp  calibration.hpp  classification.cpp  classification.hpp  classification_handler.cpp  classification_handler.hpp  classification_new.cpp  classification_new.hpp  color_space_conversion.cpp  color_space_conversion.hpp  framework.hpp  module_manager.cpp  object_detection.cpp  object_detection.hpp  object_prototype_loader.cpp  object_prototype_loader.hpp  object_tracking.cpp  object_tracking.hpp  parameter_set.cpp  parameter_set.hpp  pn_model.cpp  pn_model.hpp  pn_model_extension.cpp  pn_model_extension.hpp  pn_reasoning.cpp  pn_reasoning.hpp  pn_world_traceability.cpp  pn_world_traceability.hpp  pointcloud_util.cpp  pointcloud_util.hpp  workspace_calibration.cpp  workspace_calibration.h  workspace_objects.cpp  workspace_objects.hpp  workspace_objects_forward.hpp
source/unit_tests/: CMakeLists.txt  box_overlap.cpp  occlusion_detection_test.cpp  pn_differ_test.cpp  pn_reasoning_test.cpp  pn_util.cpp  pn_util.hpp  prediction_neighborhood.cpp
