add_subdirectory(app_evaluation_net)
add_subdirectory(app_util)
add_subdirectory(app_visualization)
add_subdirectory(csv_reader)
add_subdirectory(franka_high_level)
add_subdirectory(franka_planning)
add_subdirectory(franka_voxel)
add_subdirectory(grpc_server)
add_subdirectory(intention_prediction)
add_subdirectory(sample_data_registration)
add_subdirectory(simulation)
add_subdirectory(state_observation)
add_subdirectory(unit_tests)